tests/src/frontend/typechecking/invalid/abstract_type_const.sk
base class Foo {
  type T;
}

base class Bar {
  type T: Foo::T;
}
